--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-        <title>Login Page</title>
+        <title>FOr GIT test</title>
     </head>
     <body>
         <div id="login" class="simple" >
